Bug 465864 - Discover thinks Breeze gtk theme from flathub will be "updated" from 5.27 to 5.26.5
Summary: Discover thinks Breeze gtk theme from flathub will be "updated" from 5.27 to ...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: 5.27.0
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 468073 468311 468498 470834 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-16 19:04 UTC by Patrick Silva
Modified: 2024-03-17 21:50 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.6
Sentry Crash Report:


Attachments
Discover before installing updates (187.43 KB, image/png)
2023-02-16 19:04 UTC, Patrick Silva
Details
output of 'flatpak list' after installing updates (353.38 KB, image/png)
2023-02-16 19:05 UTC, Patrick Silva
Details
Discover - new version is an old one (90.03 KB, image/png)
2023-02-18 10:40 UTC, ratijas
Details
Discover offers Downgrades as Upgrades (102.56 KB, image/png)
2023-04-08 06:44 UTC, Christian Hartmann
Details
Screenshot Discover this morning (86.43 KB, image/png)
2023-04-29 06:53 UTC, Christian Hartmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-02-16 19:04:40 UTC
Created attachment 156319 [details]
Discover before installing updates

SUMMARY
Please compare the screenshots taken before and after installing updates.
Before the update the 'Update' page of Discover says '5.27 -> 5.26.5',
and after update the 'flatpak list' says that 5.27 version is installed.

OBSERVED RESULT
'Update' page of Discover says '5.27 -> 5.26.5'

EXPECTED RESULT
'Update' page of Discover should say '5.26.5 -> 5.27'

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Graphics Platform: Wayland
Comment 1 Patrick Silva 2023-02-16 19:05:20 UTC
Created attachment 156320 [details]
output of 'flatpak list' after installing updates
Comment 2 Nate Graham 2023-02-17 20:41:49 UTC
Oh dear, did we get these backwards again? :/
Comment 3 ratijas 2023-02-18 10:40:38 UTC
Created attachment 156421 [details]
Discover - new version is an old one

By the looks of it, I don't think it's exactly Discover's fault. But I'll take a look.
Comment 4 ratijas 2023-02-18 10:47:52 UTC
I upgraded manually with flatpak CLI. It does look like old and new versions were both at "5.27", branch "3.22". I didn't see "5.26.5" string anywhere.

```
❯ flatpak remote-info flathub org.gtk.Gtk3theme.Breeze
        ID: org.gtk.Gtk3theme.Breeze
       Ref: runtime/org.gtk.Gtk3theme.Breeze/x86_64/3.22
      Arch: x86_64
    Branch: 3.22
Collection: org.flathub.Stable
  Download: 190.8 kB
 Installed: 639.0 kB

    Commit: b7ef094ee48bab15329bfce16b5765495c0d323e7b3d05cbcb3836b2ee0eb42a
    Parent: ad62d870697fd2f6a8f77709e2ed581fcf941a0605edfb505df160472082ff54
   Subject: Update setuptools-67.3.1.tar.gz to 67.3.2 (4dc090d7)
      Date: 2023-02-15 22:52:59 +0000
❯ 
❯ flatpak info org.gtk.Gtk3theme.Breeze

Breeze GTK theme - Breeze GTK theme matching the KDE Breeze theme

          ID: org.gtk.Gtk3theme.Breeze
         Ref: runtime/org.gtk.Gtk3theme.Breeze/x86_64/3.22
        Arch: x86_64
      Branch: 3.22
     Version: 5.27.0
     License: LGPL-2.1-only
      Origin: flathub
  Collection: org.flathub.Stable
Installation: system
   Installed: 639.0 kB

      Commit: ad62d870697fd2f6a8f77709e2ed581fcf941a0605edfb505df160472082ff54
      Parent: 75fd2c1bd4da0a61ad47289ba0e78817ab80eac8c44fb34cc5b9ee17e896c859
     Subject: Update 2 modules (6899e331)
        Date: 2023-02-14 18:26:34 +0000
❯ flatpak update org.gtk.Gtk3theme.Breeze
Looking for updates…


        ID                                Branch          Op          Remote           Download
 1. [✓] org.gtk.Gtk3theme.Breeze          3.22            u           flathub          5.7 kB / 190.8 kB

Updates complete.
❯ flatpak info org.gtk.Gtk3theme.Breeze

Breeze GTK theme - Breeze GTK theme matching the KDE Breeze theme

          ID: org.gtk.Gtk3theme.Breeze
         Ref: runtime/org.gtk.Gtk3theme.Breeze/x86_64/3.22
        Arch: x86_64
      Branch: 3.22
     Version: 5.27.0
     License: LGPL-2.1-only
      Origin: flathub
  Collection: org.flathub.Stable
Installation: system
   Installed: 639.0 kB

      Commit: b7ef094ee48bab15329bfce16b5765495c0d323e7b3d05cbcb3836b2ee0eb42a
      Parent: ad62d870697fd2f6a8f77709e2ed581fcf941a0605edfb505df160472082ff54
     Subject: Update setuptools-67.3.1.tar.gz to 67.3.2 (4dc090d7)
        Date: 2023-02-15 22:52:59 +0000
```
Comment 5 ratijas 2023-02-18 13:26:14 UTC
Nah, after restarting and rebuilting several times, I can't reproduce this anymore.
Comment 6 Nate Graham 2023-02-21 18:22:57 UTC
Most bugs in Discover aren't Discover's fault, per se. "Fault" as a concept is often ambiguous due to the differing levels of support, APIs, and metadata provided by all the data streams that Discover needs to work with.

It's Discover's *responsibility* to untangle the mess and display something sensible to the user, though.
Comment 7 Patrick Silva 2023-04-02 21:26:21 UTC
*** Bug 468073 has been marked as a duplicate of this bug. ***
Comment 8 Christian Hartmann 2023-04-08 06:42:52 UTC
agree with Nate. Probably *not* Discovers fault.

in my case i have Telegram installed (shortened):
$ flatpak info org.telegram.desktop
> Version: 4.7.1

remote list says:
$ flatpak --updates remote-ls flathub
> Telegram Desktop         org.telegram.desktop             4.6.3          stable

and those are in perefct harmony with Discovers screen (see attachment)
Comment 9 Christian Hartmann 2023-04-08 06:44:26 UTC
Created attachment 157945 [details]
Discover offers Downgrades as Upgrades

flatpak info org.telegram.desktop   v.   flatpak --updates remote-ls flathub
Comment 10 Bug Janitor Service 2023-04-08 15:46:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/529
Comment 11 Ismael Asensio 2023-04-08 23:02:11 UTC
Git commit 8859aa1c64442a5165e17e94df455f2162a0cb38 by Ismael Asensio, on behalf of l10n daemon script.
Committed on 08/04/2023 at 16:49.
Pushed by iasensio into branch 'master'.

flatpak: Report latest available version

It is not guaranteed that the release list returned by AppStream
will be ordered, so let's check for the latest one to avoid showing
an older version number on the updates page.
Related: bug 448521
FiXED-IN: 5.27

M  +7    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp

https://invent.kde.org/plasma/discover/commit/8859aa1c64442a5165e17e94df455f2162a0cb38
Comment 12 Patrick Silva 2023-04-09 11:07:28 UTC
*** Bug 468311 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2023-04-09 14:40:10 UTC
Git commit f68e0d42c001f9716550e062f9e55213aac92d28 by Nate Graham, on behalf of l10n daemon script.
Committed on 09/04/2023 at 14:37.
Pushed by ngraham into branch 'Plasma/5.27'.

flatpak: Report latest available version

It is not guaranteed that the release list returned by AppStream
will be ordered, so let's check for the latest one to avoid showing
an older version number on the updates page.
Related: bug 448521
FiXED-IN: 5.27


(cherry picked from commit 8859aa1c64442a5165e17e94df455f2162a0cb38)

M  +7    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp

https://invent.kde.org/plasma/discover/commit/f68e0d42c001f9716550e062f9e55213aac92d28
Comment 14 Patrick Silva 2023-04-14 11:47:23 UTC
*** Bug 468498 has been marked as a duplicate of this bug. ***
Comment 15 Christian Hartmann 2023-04-29 06:53:35 UTC
Created attachment 158530 [details]
Screenshot Discover this morning

it's back. Discover 5.27.4

Kdeenlive and Filezille are *both* Flatpak originated.

see new attachment
Comment 16 Nate Graham 2023-04-29 15:43:26 UTC
As the "Version fixed in" field says, this is expected to be fixed in Plasma 5.27.5.
Comment 17 Moritz 2023-06-09 17:17:01 UTC
Its not fixed in 5.27.5
Comment 18 Patrick Silva 2023-06-09 18:29:29 UTC
*** Bug 470834 has been marked as a duplicate of this bug. ***