flatpak: Report latest available version

It is not guaranteed that the release list returned by AppStream
will be ordered, so let's check for the latest one to avoid showing
an older version number on the updates page.

BUG: 465864
BUG: 448521
FiXED-IN: 5.27