libdiscover/backends/FlatpakBackend/FlatpakResource.cpp
@@ -115,7 +115,13 @@ QString FlatpakResource::availableVersion() const
     if (m_availableVersion.isEmpty()) {
         const auto releases = m_appdata.releases();
         if (!releases.isEmpty()) {
-            m_availableVersion = releases.constFirst().version();
+            auto latestVersion = releases.constFirst().version();
+            for (const auto &release : releases) {
+                if (AppStream::Utils::vercmpSimple(release.version(), latestVersion) > 0) {
+                    latestVersion = release.version();
+                }
+            };
+            m_availableVersion = latestVersion;
             return m_availableVersion;
         }
     } else {
